# gossip-backend

./: .gitignore  Cargo.toml
.sqlx/: query-070c8acec17fcceff7ac6f00bc8c2a2d3c99027d3c3a35a4fc25e7ac6b686729.json  query-0ad5c3c04fa503c34859da65ac07f879673e07d46dbc7b39b77a3bd35966e8f2.json  query-3789903a94ad976b91318f30ab68dac41c3963eb24c9c3b3095490aa003f213e.json  query-3ae03e367c668a4a6e2a31e26ad3022de41ef4dbca1ef39c2b9c15ecb4f54eeb.json  query-4b16b90c18691863603094ea398aa6c265e72fe5ed8b6fad591dc007dd68121b.json  query-54e6277ee7ee444ed4ee4f08c0d71e90f8e49a5a9a64048318fdec72ff86c452.json  query-56ec05dbc97d329c78ae9fe4f044efa92013cef23cdb7281450b189f7a222e20.json  query-6e30d914a626b25b77a6f2b72cc962f63fefde4828c7ecf1e5e0bcbbc9f40b4d.json  query-74bfadb30ac96ead1c2e44f6098fc265e30e47fd0e6e3703df3037ce96c001ee.json  query-891e2c85e79161dd4105b1b760e4540268db05fa4f1e42ebeeaa0db0b4acb6e6.json  query-8a3e8a6c8bcc4f0b7087734a75669f5fb3f1dc23a0b258bffd7a011d77d8fa2a.json  query-981245a891e6c3e7c7e2e86cf50940a5efcdd2c4bf0f37005d2a6381de4c9092.json  query-cef0cdac6583bd52ab714a2839deefa07c8dcdc242d7b34f142a5f030a8b0a9e.json  query-f6f9a6c3cc4d5602da6879074b0218bd9e110e795ea14b62ec714cf16a19363d.json  query-fd9b353c44550583ee91db58cce0dd2efbf52f6b91ff748173fbed14c350f9a6.json
migrations/: 20231023192848_init.down.sql  20231023192848_init.up.sql
queries/auth/: create_user.sql  get_pending_verification.sql  get_user_by_email.sql  get_user_by_id.sql  is_email_taken.sql  verify_email.sql
src/: config.rs  db.rs  jwt.rs  main.rs  openapi.rs  state.rs
(+13 files in other folders)
