[package]
name = "gossip-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = "0.6.20"
dotenvy = "0.15.7"
jsonwebtoken = "9.1.0"
mail-send = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "uuid", "time", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
